objects/User.object
<CustomObject>
    <fields>
        <fullName>Days_off_this_month__c</fullName>
        <label>Days off this month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_off_this_year__c</fullName>
        <label>Days off this year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exit_Date__c</fullName>
        <description>A workflow populates this field when the isactive value changes from true to false</description>
        <label>Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FUSE_Phone__c</fullName>
        <label>Desk Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVMConnect__isDiallerUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track which users consume dialler license</description>
        <inlineHelpText>Check to allocate dialler capability to this user.  They must have a ContactWorld Agent Id as well.</inlineHelpText>
        <label>Can Dial Lists via Connect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__MostRecentCallEventTimestamp__c</fullName>
        <description>The timestamp of the most recent call event (deliver, transfer...) that this user has handled</description>
        <label>Most Recent Call Event Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__MostRecentCallIsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Most Recent Call Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__MostRecentCall__c</fullName>
        <label>Most Recent Call</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Agent_Id__c</fullName>
        <description>NVM Agent Id for Contact World for Salesforce</description>
        <externalId>true</externalId>
        <inlineHelpText>NVM Agent Id for Contact World for Salesforce. This should be set to the correct NVM Agent Id to make sure that call tasks are assigned to the correct Salesforce user.</inlineHelpText>
        <label>NVM Agent Id</label>
        <length>11</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Cell__c</fullName>
        <description>NewVoiceMedia click to dial Cell Phone</description>
        <formula>IF( 
        LEN( MobilePhone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(MobilePhone , &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=User&quot;, 
                   MobilePhone  , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Cell Phone</inlineHelpText>
        <label>NVM Cell</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Extension__c</fullName>
        <description>NewVoiceMedia click to dial Extension Phone</description>
        <formula>IF( 
        LEN( Extension  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(Extension , &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=User&quot;, 
                   Extension  , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Extension Phone</inlineHelpText>
        <label>NVM Extension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Phone</description>
        <formula>IF( 
        LEN( Phone )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(Phone, &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=User&quot;, 
                   Phone, &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Phone</inlineHelpText>
        <label>NVM Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVM_Phone_Number__c</fullName>
        <label>NVM Phone Number (Customer Facing)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Onboard_Date__c</fullName>
        <description>On-board date for rep</description>
        <label>Onboard Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recruiter__c</fullName>
        <label>Recruiter</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuMo_Group__c</fullName>
        <label>SuMo Group</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Traininer__c</fullName>
        <label>Traininer</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserID18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoHo_Owner_Email__c</fullName>
        <label>ZoHo Owner Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>success__CaseSafeSetID__c</fullName>
        <description>18 Character ID of the Game Level Set Id</description>
        <formula>CASESAFEID(success__SetId__c)</formula>
        <inlineHelpText>18 Character ID of the SuMo Set Id</inlineHelpText>
        <label>CaseSafeSetID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>success__Experience__c</fullName>
        <label>Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>success__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>success__Last_Game_Reset_UTC__c</fullName>
        <label>Last Game Reset</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>success__Level__c</fullName>
        <label>Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>success__Primary_Competition_Id__c</fullName>
        <label>Primary Competition Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>success__Public_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SuMo User Profile visibility</description>
        <inlineHelpText>Toggle the visibility of your SuMo User Profile to other users</inlineHelpText>
        <label>Public Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>success__SetId__c</fullName>
        <label>Set Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>success__SuMo_Administrator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Motivation Designer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>success__SuMo_Influencer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Influencer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>success__SuMo_Observer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Observer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>success__SuMo_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Player</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>UserID18__c</columns>
        <columns>NVMContactWorld__NVM_Agent_Id__c</columns>
        <columns>FULL_NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>Onboard_Date__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Automation</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>UserID18__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_BY_ALIAS</field>
            <operation>equals</operation>
            <value>mmart</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Automation</label>
        <sharedTo>
            <group>Admins_Ops</group>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>